# numpyai

./: .readthedocs.yml  README.md  pyproject.toml  requirements.txt  setup.py  test.py
examples/: a_b_testing.ipynb  all_functionality.ipynb  iris_analysis.ipynb
numpyai/: __init__.py  _ai.py  _array.py  _diagnosis.py  _exceptions.py  _prompts.py  _session.py  _utils.py  _validator.py
source/: array.rst  conf.py  diagnosis.rst  index.rst  session.rst
tests/: test_utils.py
